<?xml version="1.0"?>
<package>
  <name>imu_transformer</name>
  <version>0.2.3</version>
  <description>Node to transform sensor_msgs::Imu data from one frame into another.</description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/imu_transformer</url>
  <url type="bugtracker">https://github.com/ros-perception/imu_transformer/issues</url>
  <url type="repository">https://github.com/ros-perception/imu_transformer</url>

  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>rclcpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_sensor_msgs</run_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
