<?xml version="1.0"?>
<package>
  <name>imu_transformer</name>
  <version>0.2.3</version>
  <description>Node/nodelet combination to transform sensor_msgs::Imu data from one frame into another.</description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/imu_transformer</url>
  <url type="bugtracker">https://github.com/ros-perception/imu_transformer/issues</url>
  <url type="repository">https://github.com/ros-perception/imu_transformer</url>

  <author email="pbovbel@clearpathrobotics.com">Paul Bovbel</author>
  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_sensor_msgs</build_depend>
  <build_depend>topic_tools</build_depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_testing</test_depend>

  <export>
    <build_depend>eigen</build_depend>
    <build_type>ament_cmake</build_type>
  </export>

</package>
